# hermes

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  student.rs  team.rs  teamrequest.rs  utils.rs
src/commands/: botconfig.rs  help.rs  history.rs  leaderboard.rs  license.rs  mod.rs  passwords.rs  request.rs  settings.rs  team.rs  teamdump.rs  teamedit.rs
