[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# TODO: Revise dependencies (darling, indexmap, quote, serenity)
darling = "0.20.10"
getset = "0.1.2"
indexmap = { version = "2.6.0", features = ["serde"] }
poise = { version = "0.6.1", features = ["cache"] }
quote = "1.0.38"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { default-features = false, version = "0.12.2", features = [
	"cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder"
] }
syn = { version="2.0.94", features = ["full"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
