[package]
authors = ["Manuel de Castro <manuel@infor.uva.es>"]
edition = "2021"
name = "hermes"
version = "0.1.0"
description = "A Discord bot for integrating UVa's Tablón (https://frontendv.infor.uva.es/faq) within Discord."
license = "GPL-3.0"
repository = "https://github.com/mdccUVa/hermes"

[lib]
proc-macro = true

[profile.release]
lto = "thin"

[dependencies]
darling = "0.20.11"
getset = "0.1.6"
poise = { version = "0.6.1", features = ["cache"] }
quote = "1.0.40"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12.4"
syn = { version = "2.0.104", features = ["full"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] } # Required by serenity.
